# demochain

./: .gitignore  README.md  README_AUTH.md
apitool-ui/: package.json
apitool-ui/components/: Header.tsx
apitool-ui/pages/: index.tsx  sender.tsx
config/: nginx.conf
config/cert/: apitool.org.key  apitool.org.pem
demochain-api/: Cargo.toml  build.sh  env.development  env.production
demochain-api/src/: app.rs  bootstrap.rs  main.rs  router.rs
demochain-api/src/handlers/: article.rs  health.rs  mod.rs  order.rs  term.rs  user.rs
demochain-api/src/models/: article.rs  idea.rs  mod.rs  order.rs  payment.rs  r.rs  term.rs  user.rs
demochain-api/src/service/: article_service.rs  health.rs  idea.rs  mod.rs  order_service.rs  term_service.rs  user_service.rs
demochain-api/src/utils/: jwt.rs  jwt_util.rs  mod.rs  password.rs  time.rs
demochain-ui/: .env.example  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  types.ts
demochain-ui/components/: ApiMockHome.tsx  ApiTester.tsx  Footer.tsx  Header.tsx  LoginModal.tsx
demochain-ui/docs/: PAYMENT_SYSTEM_GUIDE.md  PERMISSION_SYSTEM.md  POS_PERMISSION_USAGE.md  responsive-guide.md
demochain-ui/examples/: PermissionSystemExample.tsx
demochain-ui/layout/: Footer.tsx  Header.tsx  index.tsx  layout.tsx
demochain-ui/pages/: 404.tsx  _app.tsx  _document.tsx  block.tsx  coinbase.tsx  distribution.tsx  glossary.tsx  hash.tsx  index.tsx  mock.tsx  order.tsx  orders.tsx  pricing.tsx  token.tsx
demochain-ui/styles/: globals.css
demochain-ui/types/: block.ts  blockchain.ts
(+163 files in other folders)
